<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PNG</string>
    <string name="action_settings">Settings</string>
    <string name="Text">Status: -</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="List">List Paired Devices</string>
    <string name="Find">Search New Devices/Cancel</string>
    <string name="time">Update Time</string>
    <string name="shutdown">Shutdown</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="test">test</string>

</resources>